[package]
name = "tokio-rusqlite-new"
version = "0.8.0"
authors = ["xuxiaocheng <2762267080@qq.com>", "Programatik <programatik29@gmail.com>", "Adi Salimgereev <adisalimgereev@gmail.com>"]
edition = "2021"
description = "Asynchronous handle for rusqlite library."
documentation = "https://docs.rs/tokio-rusqlite-new"
repository = "https://github.com/xuxiaocheng0201/tokio-rusqlite"
license = "MIT"
keywords = ["async", "rusqlite", "sqlite"]
categories = ["asynchronous", "database"]

[features]
bundled = ["rusqlite/bundled"]

[dependencies]
crossbeam-channel = "~0.5"
rusqlite = "~0.35"
tokio = { version = "^1.44", features = ["sync"] }

[dev-dependencies]
rusqlite = { version = "~0.35", features = ["bundled"] }
tokio = { version = "^1.44", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "tests"
